# Computer-Graphics-Showcase

./: .gitignore
Code/: CMakeLists.txt  preview.cpp
Code/src/: bvh.cpp  bvh.h  camera.cpp  camera.h  cg_math.h  image.cpp  image.h  main.cpp  obj_loader.cpp  obj_loader.h  ray.h  scene.cpp  scene.h  stb_image.h
Writing/: README.md
